fix: Card overflow

--- a/main.css
+++ b/main.css
@@ -732,6 +732,7 @@ a[href] .itemContent .piTitle::after {
 .member-list {
     display: flex;
     justify-content: center;
+    width: 100%;
 }
 
 .member-list .member-showcase {
